refactor(order-domain-core): 테스트 추가 및 리팩토링